--- a/index.html
+++ b/index.html
@@ -3,8 +3,8 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="icon" href="/favicon.ico" type="image/x-icon">
     <title>Моя домашня сторінка</title>
+    <link rel="icon" type="image/png" sizes="16x16" href="/favicon_io-2/favicon.ico">
 
 </head>
 <body>
